--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "prettier": "^1.19.1"
+  },
+  "dependencies": {
+    "telnet-client": "^1.4.6",
+    "websocket": "^1.0.32"
   }
 }
