--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
+    "async-mutex": "^0.2.4",
     "telnet-client": "^1.4.6",
     "websocket": "^1.0.32"
   }
