Add support for the new voice record/playback feature
The upload to the LMS is done using a smb share.
Two new entries are added to the config.json to configure this.
The uploadPath path is the location where the saved
file should be stored and can be a smb mount to the LMS server.
The uploadPlaybackPath is the location on the smb and is used
to start the playback.

--- a/bin/config.json
+++ b/bin/config.json
@@ -6,5 +6,7 @@
     },
     "lms_host": "localhost",
     "lms_port": 9000,
-    "lms_cli_port": 9090
+    "lms_cli_port": 9090,
+    "uploadPath": "/Volumes/Music_Files",
+    "uploadPlaybackPath": "/home/music/music_files"
 }
