Add a cors proxy for all coverarts
This is needed as the app only accepts images with correct
cors headers.

--- a/bin/config.json
+++ b/bin/config.json
@@ -9,4 +9,5 @@
     "lms_cli_port": 9090,
     "uploadPath": "/Volumes/Music_Files",
     "uploadPlaybackPath": "/home/music/music_files"
+    "cors_port": 7092
 }
