Call scripts for all actions which can't be done in the MSG
E.g. for changing the equalizer, or playing the uploaded voice
recording.

The scripts are configured using the "scripts" section in the
config.json. Every command has it's own entry in the config.json,
but this doesn't mean it also needs to be separate script which
is called.
Every script can use the provided {{arg}} placeholders in their
commands. These entries will be replaced by the MSG before
executing the command.

--- a/bin/config.json
+++ b/bin/config.json
@@ -10,4 +10,10 @@
     "uploadPath": "/Volumes/Music_Files",
     "uploadPlaybackPath": "/home/music/music_files"
     "cors_port": 7092
+    "scripts": {
+        "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
+        "changeEqualizer": "echo {{name}} {{zones}}",
+        "changeDefaultVolume": "echo {{name}} {{zones}} {{defaultVolume}}",
+        "changeMaxVolume": "echo {{name}} {{zones}} {{maxVolume}}"
+    }
 }
