--- a/bin/config.json
+++ b/bin/config.json
@@ -10,6 +10,7 @@
     "uploadPath": "/Volumes/Music_Files",
     "uploadPlaybackPath": "/home/music/music_files"
     "cors_port": 7092
+    "macAddress": "",
     "scripts": {
         "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
         "changeEqualizer": "echo {{name}} {{zones}}",
