--- a/bin/config.json
+++ b/bin/config.json
@@ -8,8 +8,8 @@
     "lms_port": 9000,
     "lms_cli_port": 9090,
     "uploadPath": "/Volumes/Music_Files",
-    "uploadPlaybackPath": "/home/music/music_files"
-    "cors_port": 7092
+    "uploadPlaybackPath": "/home/music/music_files",
+    "cors_port": 7092,
     "macAddress": "",
     "scripts": {
         "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
