Execute the playAlarmSound script on every alarm event

--- a/bin/config.json
+++ b/bin/config.json
@@ -13,6 +13,7 @@
     "macAddress": "",
     "scripts": {
         "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
+        "playAlarmSound": "echo {{name}} {{type}} {{volume}}",
         "changeEqualizer": "echo {{name}} {{zones}}",
         "changeDefaultVolume": "echo {{name}} {{zones}} {{defaultVolume}}",
         "changeMaxVolume": "echo {{name}} {{zones}} {{maxVolume}}",
