Add support for the TTS command
The volume is given directly to the script.
If the current Zone off or the volume is lower than the TTSmin
Volume defined in the Zone, the TTSmin volume is provided to the
MSG by the Miniserver.

--- a/bin/config.json
+++ b/bin/config.json
@@ -14,6 +14,7 @@
     "scripts": {
         "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
         "playAlarmSound": "echo {{name}} {{type}} {{volume}}",
+        "playTTS": "echo {{name}} {{language}} {{text}} {{volume}}",
         "changeEqualizer": "echo {{name}} {{zones}}",
         "changeDefaultVolume": "echo {{name}} {{zones}} {{defaultVolume}}",
         "changeMaxVolume": "echo {{name}} {{zones}} {{maxVolume}}",
