--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async-mutex": "^0.2.4",
     "cors-anywhere": "^0.4.3",
+    "debug": "^4.3.1",
     "node-rsa": "^1.1.1",
     "telnet-client": "^1.4.6",
     "websocket": "^1.0.32"
