--- a/bin/config.json
+++ b/bin/config.json
@@ -13,6 +13,7 @@
     "macAddress": "",
     "useSlowQueueWorkaround": true,
     "sayFav": true,
+    "sayFavVolumeBoost": 0,
     "scripts": {
         "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
         "playAlarmSound": "echo {{name}} {{type}} {{volume}}",
