--- a/bin/config.json
+++ b/bin/config.json
@@ -7,6 +7,9 @@
     "lms_host": "localhost",
     "lms_port": 9000,
     "lms_cli_port": 9090,
+    "ms_host": "<ip>",
+    "ms_user": "<user>",
+    "ms_password": "<pw>",
     "uploadPath": "/Volumes/Music_Files",
     "uploadPlaybackPath": "/home/music/music_files",
     "cors_port": 7092,
