--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async-mutex": "^0.2.4",
     "cors-anywhere": "^0.4.3",
     "debug": "^4.3.1",
+    "lxcommunicator": "^1.1.1",
     "node-rsa": "^1.1.1",
     "telnet-client": "^1.4.6",
     "websocket": "^1.0.32"
