Add a way to filter entries in the spotify toplevel menu

--- a/bin/config.json
+++ b/bin/config.json
@@ -24,6 +24,8 @@
         "talk",
         "sports"
     ],
+    "filteredSpotifyEntries": [
+    ],
     "scripts": {
         "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
         "playAlarmSound": "echo {{name}} {{type}} {{volume}}",
