Add syncing of usersettings over multiple users
The usersettings change notification also contains the information
for which user the settings have changed. Retrieving the user setting
for another user is not possible, so we have to maintain a list
of users we want to sync. The config.json has been adapted accordingly.

Whenever one of the settings of our user changes, the current active
accounts are also written to the settings of all other users to
keep them in sync and always show the correct active user of the zone.

--- a/bin/config.json
+++ b/bin/config.json
@@ -7,10 +7,13 @@
     "lms_host": "localhost",
     "lms_port": 9000,
     "lms_cli_port": 9090,
-    "ms_host": "<ip>",
-    "ms_user": "<user>",
-    "ms_password": "<pw>",
-    "uploadPath": "/Volumes/Music_Files",
+    "ms": {
+        "host": "<host>",
+        "users": [
+            { "user": "<user1>", "password": "<pw1>" }
+        ]
+    },
+    "uploadPath": ".",
     "uploadPlaybackPath": "/home/music/music_files",
     "cors_port": 7092,
     "macAddress": "",
