--- a/bin/config.json
+++ b/bin/config.json
@@ -7,6 +7,7 @@
     "lms_host": "localhost",
     "lms_port": 9000,
     "lms_cli_port": 9090,
+    "msApi": "LWSS V 1.4.10.06 | ~API:1.6~",
     "ms": {
         "host": "<host>",
         "users": [
