--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async-mutex": "^0.2.4",
     "cors-anywhere": "^0.4.3",
+    "crc": "^4.1.0",
     "debug": "^4.3.1",
     "lxcommunicator": "^1.1.1",
     "node-rsa": "^1.1.1",
