--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "async-mutex": "^0.2.4",
+    "axios": "^1.1.3",
     "cors-anywhere": "^0.4.3",
-    "crc": "^4.1.0",
+    "crc": "^4.1.1",
     "debug": "^4.3.1",
     "lxcommunicator": "^1.1.1",
     "node-rsa": "^1.1.1",
