Add support for the reboot command
Similar to the powerOff command, this calls a script which can
be configured in the config.json

--- a/bin/config.json
+++ b/bin/config.json
@@ -33,6 +33,7 @@
     ],
     "scripts": {
         "powerOff": "echo {{name}}",
+        "reboot": "echo {{name}}",
         "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
         "playGroupedAlarmSound": "echo {{name}} {{type}} {{volumes}}",
         "stopGroupedAlarmSound": "echo {{name}} {{type}} {{zones}}",
