Add support for the diagnosis command
Similar to other commands this command will call a bash script
configured in the config.json.

The executed script can return a string which is interpreted as
JSON and shown in the app.

Also improve the error handling when not all scripts are configured
and a empty string is returned.

--- a/bin/config.json
+++ b/bin/config.json
@@ -34,6 +34,7 @@
     "scripts": {
         "powerOff": "echo {{name}}",
         "reboot": "echo {{name}}",
+        "diagnosis": "echo '{ \"{{name}}\" : \"value\" }'",
         "playUploadedFile": "echo {{name}} {{zones}} {{path}}",
         "playGroupedAlarmSound": "echo {{name}} {{type}} {{volumes}}",
         "stopGroupedAlarmSound": "echo {{name}} {{type}} {{zones}}",
